[package]
name          = "jws"
version       = "0.2.7"
authors       = ["Maarten de Vries <maarten@de-vri.es>"]
description   = "JSON Web Signature for Rust"
documentation = "http://docs.rs/jws/"
repository    = "http://github.com/de-vri-es/jws"
readme        = "README.md"
keywords      = ["JWS", "JWT", "JSON", "web", "token"]
license       = "BSD-2-Clause"
edition       = "2018"

[dependencies]
hmac          = "0.12.0"
sha2          = "0.10.1"
serde         = "1.0"
serde_derive  = "1.0"
serde_json    = "1.0"
base64        = "0.13"
derive-error  = "0.0"

[dev-dependencies]
assert2 = "0.3.3"
