[package]
name          = "jws"
version       = "0.2.9"
authors       = ["Maarten de Vries <maarten@de-vri.es>"]
description   = "JSON Web Signature for Rust"
documentation = "https://docs.rs/jws/"
repository    = "https://github.com/de-vri-es/jws"
readme        = "README.md"
keywords      = ["JWS", "JWT", "JSON", "web", "token"]
license       = "BSD-2-Clause"
edition       = "2018"

[dependencies]
hmac          = "0.12.0"
sha2          = "0.10.1"
serde         = "1.0.0"
serde_derive  = "1.0.0"
serde_json    = "1.0.0"
base64        = "0.21.0"
derive-error  = "0.0.5"

[dev-dependencies]
assert2 = "0.3.3"
